Add FetchIndustryIds handler
